# range-map-regex

./: AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
examples/: basic.rs  char_to_byte.rs  float_literals.rs  float_literals_utf8_byte.rs  not_ident.rs
src/: dfa.rs  display.rs  lib.rs  range-map-regex.code-workspace  state_id_set.rs
tests/: examples_as_tests.rs
