[package]
name = "range-map-regex"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2"
range-set-blaze = { path = "../range-set-blaze" }
unicode-ident = "1"

[profile.dev]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 3
debug-assertions = false
overflow-checks = false
